# libbeato

./: .drone.yml  .gitignore  .travis.yml  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  appveyor.yml  config.h  config.h.in  config.status  configure  configure.ac  libtool
beato/: Makefile  Makefile.am  Makefile.in  bbiAugment.c  bbiAugment.h  bigs.c  bigs.h  cluster.c  cluster.h  extrema.c  extrema.h  fastq_stuff.c  fastq_stuff.h  favs.c  favs.h  metaBig.c  metaBig.h  metaBigBam.c  metaBigBam.h  mt19937-64.c  mt64.h  r_stuff.h  random_coord.c  random_coord.h  sax.c  sax.h  stuff.c  stuff.h
jkweb/: Makefile  Makefile.am  Makefile.in  bamFile.h  cirTree.c  dnaMotif.c  gifwrite.c  htmshell.h  pngwrite.c  vPng.c
libbeato/: Makefile.am  Makefile.in  metaBig.h  metaBigBam.c
libbeato/.deps/: libbeato_a-bigs.Po  libbeato_a-cluster.Po  libbeato_a-extrema.Po  libbeato_a-fastq_stuff.Po  libbeato_a-favs.Po  libbeato_a-metaBig.Po  libbeato_a-metaBigBam.Po  libbeato_a-random_coord.Po  libbeato_a-sax.Po  libbeato_a-stuff.Po
libjkweb/: Makefile.in  twoBit.c
libjkweb/.deps/: aliType.Po  annoAssembly.Po  annoFilter.Po  annoFormatTab.Po  annoFormatter.Po  annoGrateWig.Po  annoGrator.Po  annoGratorQuery.Po  annoOption.Po  annoRow.Po  annoStreamBigBed.Po  annoStreamBigWig.Po  annoStreamTab.Po  annoStreamVcf.Po  annoStreamer.Po  apacheLog.Po  asParse.Po  axt.Po  axtAffine.Po  bPlusTree.Po  bamFile.Po  base64.Po  basicBed.Po  bbiRead.Po  bbiWrite.Po  bigBed.Po  binRange.Po  bits.Po  blastOut.Po  blastParse.Po  boxClump.Po  boxLump.Po  bwgCreate.Po  bwgQuery.Po  bwgValsOnChrom.Po  cda.Po  chain.Po  chainBlock.Po  chainConnect.Po  chainToAxt.Po  (+166 more)
test/: compile.c
