ACLOCAL_AMFLAGS = -I m4
SUBDIRS = beato

beatoincludedir = $(includedir)/beato
beatoinclude_HEADERS = \
	beato/bbiAugment.h \
	beato/bigs.h \
	beato/cluster.h \
	beato/extrema.h \
	beato/fastq_stuff.h \
	beato/favs.h \
	beato/metaBig.h \
	beato/metaBigBam.h \
	beato/r_stuff.h \
	beato/random_coord.h \
	beato/sax.h \
	beato/stuff.h 